# EduAnalytics

./: .gitignore  README.md  app.py  data_analyse.py  pyproject.toml  requirements.txt
report/: generate_figures.py  main.tex  references.bib
templates/: index.html
