[project]
name = "eduanalytics"
version = "1.0.0"
description = "在线学习行为数据分析与 AI 问答平台 · Web app for MOOC learning behavior analysis with data-aware LLM chat"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }
authors = [
    { name = "李涛 (Li Tao)", email = "litao24@mails.tsinghua.edu.cn" },
]
keywords = ["mooc", "learning-analytics", "education", "flask", "echarts", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "flask>=3.0,<4.0",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<2.1",
    "scikit-learn>=1.3,<2.0",
    "requests>=2.31,<3.0",
]

[project.urls]
Homepage = "https://github.com/Lee-Eee-Eee/EduAnalytics"
Repository = "https://github.com/Lee-Eee-Eee/EduAnalytics"
Issues = "https://github.com/Lee-Eee-Eee/EduAnalytics/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["app.py", "templates/**/*"]

[tool.uv]
package = false
